Fix header z-index (2)

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
     justify-content: space-between;
     align-items: center;
     outline: 1px solid #aaaaaa;
-    z-index: 2;
+    z-index: 3;
 }
 
 .leftSide {
